feat: add Compose Desktop integration with embedded 3D rendering (#7)
* feat: add Compose Desktop integration with embedded 3D rendering

Implement true embedded wgpu rendering inside a Compose Desktop window
using JFrame + ComposePanel architecture with AWT Canvas native handle
extraction.

- Add PrismPanel (AWT Canvas) with wgpu surface creation from native
  NSView/HWND/X11 handles and dual-path macOS resolution (JNA + AWT
  reflection fallback)
- Add ComposeMain using JFrame + ComposePanel + Swing Timer render loop,
  avoiding -XstartOnFirstThread deadlock with Compose application {}
- Add MVI state management (DemoUiState/DemoIntent/DemoStore with
  StateFlow) and Material3 ComposeDemoControls panel
- Add shared DemoScene factory used by both GLFW and Compose demos
- Add WgpuRenderer surfacePreConfigured flag and onResize callback
- Add PrismView.jvm implementation with SwingPanel + PrismPanel
- Add EngineState owned/external engine lifecycle management
- Add 7 DemoStore unit tests (all 177 tests pass)
- Add deferred onReady for 0x0 initial Canvas size and camera aspect
  ratio updates on resize

* refactor: MVI architecture for Compose layer with lifecycle-aware state

- Add Store<State, Event> interface in prism-core for shared MVI contract
- Split EngineState into immutable data class + EngineStore with pure reducer
- Add EngineStateEvent sealed interface (Initialized, Disposed, SurfaceResized, FrameTick)
- Refactor PrismView from callback-based to state-driven (EngineStore)
- Move PrismView actual from iosMain to appleMain (covers iOS + macOS)
- Add @Stable to EngineStore to prevent excessive recomposition
- Use map/distinctUntilChanged in PrismOverlay for selective state collection
- Migrate all composables from collectAsState to collectAsStateWithLifecycle
- Add lifecycle-runtime-compose and kotlinx-coroutines-swing to prism-compose
- Use withFrameNanos for vsync-synchronized render loop in PrismView.jvm
- DemoStore implements Store interface, rename redu